--- a/config.json
+++ b/config.json
@@ -67,5 +67,11 @@
       "checks.LatinNameSameAsCyrillicCheck",
       "checks.LatinNameNotInCyrillicCheck"
     ]
+  },
+  "Serbia-AddingSrLatn": {
+    "location": "sparql/adding_sr_latn.sparql",
+    "checks": [
+      "checks.GenericSophoxCheck"
+    ]
   }
 }
