Playing around to get sophox to be one of the sources (besides .pbf)

--- a/config.json
+++ b/config.json
@@ -70,6 +70,8 @@
   },
   "Serbia-AddingSrLatn": {
     "location": "sparql/adding_sr_latn.sparql",
-    "checks": []
+    "checks": [
+      "checks.GenericSophoxCheck"
+    ]
   }
 }
