--- a/config.json
+++ b/config.json
@@ -68,6 +68,12 @@
       "checks.LatinNameNotInCyrillicCheck"
     ]
   },
+  "Serbia-AddingName": {
+    "location": "sparql/adding-name.sparql",
+    "checks": [
+      "checks.GenericSophoxCheck"
+    ]
+  },
   "Serbia-AddingSrLatn-North": {
     "location": "sparql/adding_sr_latn-north.sparql",
     "checks": [
